# daikintestproject

./: README.txt
requirements/: requirements_mail.txt  requirements_specs.txt
src/: CMakeLists.txt  TemperatureControl.cpp  TemperatureControl.h  TemperatureControlTest.cpp  main.cpp
